--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest package="io.flutter.plugins.webviewflutter">
+	 <application>
+        <activity
+            android:name=".WebFileChooser"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+    </application>
 </manifest>
