--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest package="io.flutter.plugins.webviewflutter">
+<manifest package="io.flutter.plugins.webviewflutter"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	>
 	 <application>
         <activity
             android:name=".WebFileChooser"
